Added comments, and updated things

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,11 +1,29 @@
 Host lab
     User a3mathur
-    HostName ieng6-245.ucsd.edu
+    HostName ieng6-247.ucsd.edu
 
 Host rpi
     User pi
     HostName 192.168.2.2
 
-Host tutor
-    User cs30x38
+Host 30tutor
+    User cs30x7
     HostName ieng9.ucsd.edu
+
+Host 11tutor
+    User cs11f8
+    HostName ieng6-247.ucsd.edu
+
+Host 30grader
+    User cs30x3
+    HostName ieng9.ucsd.edu
+
+Host 11grader
+    User cs11f62
+    HostName ieng6-247.ucsd.edu
+
+Host vm
+    User mininet
+    HostName 192.168.22.128
+
+SendEnv U_AM
