--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,57 +1,162 @@
 # set screen 256 colors
 set -g default-terminal "screen-256color"
 
-#### COLOUR (Solarized dark) {{{
+    #### COLOUR (Solarized dark) {{{
 
-# default statusbar colors
-set-option -g status-bg black #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr default
+##### default statusbar colors
+####set-option -g status-bg black #base02
+####set-option -g status-fg yellow #yellow
+####set-option -g status-attr default
 
-# default window title colors
-set-window-option -g window-status-fg brightblue #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+##### default window title colors
+####set-window-option -g window-status-fg brightblue #base0
+####set-window-option -g window-status-bg default
+#####set-window-option -g window-status-attr dim
 
-# active window title colors
-set-window-option -g window-status-current-fg yellow #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+##### active window title colors
+####set-window-option -g window-status-current-fg yellow #orange
+####set-window-option -g window-status-current-bg default
+#####set-window-option -g window-status-current-attr bright
 
-# pane border
-set-option -g pane-border-fg black #base02
-set-option -g pane-active-border-fg brightmagenta #base01
+##### pane border
+####set-option -g pane-border-fg black #base02
+####set-option -g pane-active-border-fg brightmagenta #base01
 
-# message text
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
+##### message text
+####set-option -g message-bg black #base02
+####set-option -g message-fg brightred #orange
 
-# pane number display
-set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
+##### pane number display
+####set-option -g display-panes-active-colour blue #blue
+####set-option -g display-panes-colour brightred #orange
 
-# clock
-set-window-option -g clock-mode-colour green #green
+##### clock
+####set-window-option -g clock-mode-colour green #green
 
-# bell
-set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
-#}}}
+##### bell
+####set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
+#####}}}
 
+#   # {{{
+#   ######################
+#   ### DESIGN CHANGES ###
+#   ######################
+
+#   # panes
+#   set -g pane-border-fg black
+#   set -g pane-active-border-fg colour237
+
+#   ## Status bar design
+#   # status line
+#   set -g status-justify left
+#   set -g status-bg default
+#   set -g status-fg colour12
+#   set -g status-interval 2
+
+#   # messaging
+#   set -g message-fg black
+#   set -g message-bg yellow
+#   set -g message-command-fg blue
+#   set -g message-command-bg black
+
+#   #window mode
+#   setw -g mode-bg colour6
+#   setw -g mode-fg colour0
+
+#   # window status
+#   setw -g window-status-format " #F#I:#W#F "
+#   setw -g window-status-current-format " #F#I:#W#F "
+#   setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
+#   setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
+#   setw -g window-status-current-bg colour0
+#   setw -g window-status-current-fg colour11
+#   setw -g window-status-current-attr dim
+#   setw -g window-status-bg green
+#   setw -g window-status-fg black
+#   setw -g window-status-attr reverse
+
+#   # Info on left (I don't have a session display for now)
+#   set -g status-left ''
+
+#   # loud or quiet?
+#   set-option -g visual-activity off
+#   set-option -g visual-bell off
+#   set-option -g visual-silence off
+#   set-window-option -g monitor-activity off
+#   set-option -g bell-action none
+
+#   set -g default-terminal "screen-256color"
+
+#   # The modes {
+#   setw -g clock-mode-colour colour135
+#   setw -g mode-attr bold
+#   setw -g mode-fg colour196
+#   setw -g mode-bg colour238
+
+#   # }
+#   # The panes {
+
+#   set -g pane-border-bg colour235
+#   set -g pane-border-fg colour238
+#   set -g pane-active-border-bg colour236
+#   set -g pane-active-border-fg colour51
+
+#   # }
+#   # The statusbar {
+
+#   set -g status-position bottom
+#   set -g status-bg colour235
+#   set -g status-fg colour114
+#   set -g status-attr dim
+#   set -g status-left ''
+#   set -g status-right '#[fg=colour203,bg=colour235,bold] %H:%M on %a %d-%m'
+#   set -g status-right-length 50
+#   set -g status-left-length 20
+
+#   setw -g window-status-current-fg colour203
+#   setw -g window-status-current-bg colour237
+#   setw -g window-status-current-attr bold
+#   setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour68]#W#[fg=colour114]#F '
+
+#   setw -g window-status-fg colour209
+#   setw -g window-status-bg colour237
+#   setw -g window-status-attr none
+#   setw -g window-status-format ' #I#[fg=colour250]:#[fg=colour250]#W#[fg=colour244]#F '
+
+#   setw -g window-status-bell-attr bold
+#   setw -g window-status-bell-fg colour255
+#   setw -g window-status-bell-bg colour1
+
+#   # }
+#   # The messages {
+
+#   set -g message-attr bold
+#   set -g message-fg colour232
+#   set -g message-bg colour166
+
+#   # }
+#   #}}}
+# don't rename windows automatically
+set-option -g allow-rename off
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Vi copypaste mode
+set-window-option -g mode-keys vi
+#bind-key -T vi-copy 'v' begin-selection
+#bind-key -T vi-copy 'y' copy-selection
+
+# Remap window navigation to vim
+# {{{
 # split panes using | and -
 bind \ split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
 
-# don't rename windows automatically
-set-option -g allow-rename off
-
-# Vi copypaste mode
-set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-
-# Remap window navigation to vim
+# pane movement
 unbind-key j
 bind-key j select-pane -D
 unbind-key k
@@ -61,8 +166,25 @@ bind-key h select-pane -L
 unbind-key l
 bind-key l select-pane -R
 
+# change how we paste the buffer to be more like vim
 unbind-key p
 bind-key p paste-buffer
 
 unbind-key ]
-bind-key ] previous-pane
+bind-key ] previous-window
+
+unbind-key [
+bind-key [ choose-tree
+
+unbind-key s
+bind-key s copy-mode
+# }}}
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'KeitaNakamura/neodark.vim'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+# vim:foldmethod=marker foldlevelstart=0
